<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".AddGoalActivity">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/return_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/teal_200"
        app:icon="@drawable/return_vector" />

    <TextView
        android:id="@+id/title_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="Add new goal"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/edittext_roundedbox"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/title_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/teal_100"
            android:hint="Title"
            android:lines="2"
            android:padding="15dp" />

        <EditText
            android:id="@+id/description_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/teal_100"
            android:gravity="top"
            android:hint="Description"
            android:lines="5"
            android:padding="15dp" />

        <!-- discuss: manually input goal number/todo? -->
        <EditText
            android:id="@+id/goals_counter_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/teal_100"
            android:hint="Final Goal"
            android:padding="15dp"
            android:lines="1" />

        <TextView
            android:id="@+id/deadline_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/teal_100"
            android:text="Deadline"
            android:textSize="19dp"
            android:padding="15dp"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_goal_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/white"
        android:text="ADD GOAL"
        android:textColor="@color/teal_200" />
</LinearLayout>