<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/edittext_roundedbox">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title_output"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:text="Goal title"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/description_output"
        android:layout_below="@+id/title_output"
        android:textColor="@color/black"
        android:text="Goal Description"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/deadline_output"
        android:layout_below="@+id/description_output"
        android:textColor="@color/black"
        android:text="Deadline not assigned"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/overdue_output"
        android:layout_alignParentRight="true"
        android:textColor="#FF0000"
        android:textStyle="bold"
        android:text="Overdue"
        android:visibility="gone"
        android:padding="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/completed_output"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/overdue_output"
        android:textColor="#00FF00"
        android:textStyle="bold"
        android:text="Completed"
        android:visibility="gone"
        android:padding="10dp"/>


    <!-- if setting daily to do: set string ref "Daily To do: " and change with realm transactions -->

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleHorizontal"
        android:progressDrawable="@drawable/progressbar_bg"
        android:layout_below="@+id/deadline_output"
        android:layout_margin="10dp" />
</RelativeLayout>