...
        android:text=""
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/goals_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/add_new_goal_button"
        android:layout_below="@+id/goal_title">

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_new_goal_button"
...
